--- a/Contoso.Api/Contoso.Api.csproj
+++ b/Contoso.Api/Contoso.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a88e1395-2f0b-4566-89ef-eb64b3af8f72</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
