--- a/Contoso.Api/appsettings.json
+++ b/Contoso.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=Contoso;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
+    "DefaultConnection": ""
   },
   "JwtSettings": {
     "Issuer" : "Contoso.API",
