--- a/Contoso.Api/appsettings.json
+++ b/Contoso.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "ContosoDBConnection" : "PLACERHOLDER"
   },
   "JwtSettings": {
     "Issuer" : "Contoso.API",
