--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Contoso.FileUploaderConsole/.vs/Contoso.FileUploaderConsole
 /Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/bin/Debug/net8.0
 /Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/obj
+/Contoso.FileUploaderConsole/.vs/ProjectEvaluation
