--- a/Contoso.Api/appsettings.json
+++ b/Contoso.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "",
-    "ContosoDBConnection": "Server=tcp:htc-az204.database.windows.net,1433;Initial Catalog=contoso;Persist Security Info=False;User ID=contosoadmin1;Password=Sigurnipass123!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ContosoDBConnection": "CONNECTION STRING PLACEHOLDER"
   },
   "JwtSettings": {
     "Issuer" : "Contoso.API",
