--- a/Contoso.WebApp/appsettings.json
+++ b/Contoso.WebApp/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BackendUrl": "http://localhost:5156",
+  "BackendUrl": "https://localhost:7008",
   "AllowedHosts": "*"
 }
