--- a/Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/Contoso.FileUploaderConsole.csproj
+++ b/Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/Contoso.FileUploaderConsole.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
