--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/bin/Debug/net8.0
 /Contoso.FileUploaderConsole/Contoso.FileUploaderConsole/obj
 /Contoso.FileUploaderConsole/.vs/ProjectEvaluation
+/Contoso.WebApp/.vscode
