Update to the solution

--- a/Contoso.WebApp/appsettings.json
+++ b/Contoso.WebApp/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "BackendUrl": "https://localhost:7008",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SasToken": "?sp=r&st=2025-03-19T15:15:01Z&se=2025-03-28T23:15:01Z&sv=2022-11-02&sr=c&sig=h9FIOlVV34mxyB5Nr3L0QcH1DFquW1QHQbSaB%2Bf67SU%3D"
 }
